--- a/tutoStreaming.html
+++ b/tutoStreaming.html
@@ -8,10 +8,10 @@
 <body>
 	<video autoplay></video>
 	<canvas id='miCanvas' width='800' height='600'></canvas>
-	<script src="http://localhost:8080/socket.io/socket.io.js"></script>
+	<script src="http://192.168.110.134:8080/socket.io/socket.io.js"></script>
 	<script>
 		var bandera=0;
-		var websocket = io.connect("http://localhost:8080");
+		var websocket = io.connect("http://192.168.110.134:8080");
 		window.URL = window.URL || window.webkitURL;
 		navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
 
@@ -35,7 +35,7 @@
 			var dataURL = canvas.toDataURL('image/jpeg',0.2);
 			if(bandera!=0) websocket.emit('newFrame',dataURL);
 			requestAnimFrame(function(){
-				dFrame(ctx,video,canvas);
+				setTimeout(function(){dFrame(ctx,video,canvas);},200)
 			});
 		}
 		window.addEventListener('load',init);
